# sic-xe-assembler

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.cc  opcode_table.hpp
src/: assembler.cc  assembler.hpp  instruction_validator.cc  instruction_validator.hpp  main.cc  main.cpp  opcode_table.hpp  pass_1.cpp  pass_1.h  pass_2.cpp  pass_2.h  table_store.cpp  table_store.h  tokenizer.cc  tokenizer.hpp  utilities.cpp  utilities.h
tests/: csect.sic  fig2.11.sic  noncsect.sic  test.sic  test.sic.listing  test_program1.sic
